tests/snapshots/integration_test__log_data@6cf9323377a9810b088df171ae43fcc0.snap
---
source: tests/integration_test.rs
expression: record
info: "type=USER_TTY msg=audit(1491922671.974:1065045): pid=28202 uid=0 auid=1000 ses=762 subj=unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023 data=\"exit\""
---
{
  "record_type": "USER_TTY",
  "timestamp": 1491922671974,
  "id": 1065045,
  "fields": {
    "auid": 1000,
    "data": "exit",
    "pid": 28202,
    "ses": 762,
    "subj": "unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023",
    "uid": 0
  }
}
