tests/snapshots/integration_test__log_data@731418ac69b84e9903677b441fbcd666.snap
---
source: tests/integration_test.rs
expression: record
info: "type=ADD_GROUP msg=audit(1451781471.602:194894): pid=1321 uid=0 auid=1000 ses=1 subj=unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023 msg='op=add-group acct=\"frodo\" exe=\"/usr/sbin/useradd\" hostname=? addr=? terminal=pts/0 res=success'"
---
{
  "record_type": "ADD_GROUP",
  "timestamp": 1451781471602,
  "id": 194894,
  "fields": {
    "auid": "1000",
    "msg": "op=add-group acct=\"frodo\" exe=\"/usr/sbin/useradd\" hostname=? addr=? terminal=pts/0 res=success",
    "pid": "1321",
    "ses": "1",
    "subj": "unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023",
    "uid": "0"
  }
}
