tests/snapshots/integration_test__log_data@7d23a240401101db037c3c17b608100f.snap
---
source: tests/integration_test.rs
expression: record
info: "type=USER_AUTH msg=audit(1481077043.046:408): pid=1298 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:sshd_t:s0-s0:c0.c1023 msg='op=pubkey_auth rport=63927 acct=\"andrew_kroh\" exe=\"/usr/sbin/sshd\" hostname=? addr=96.241.146.97 terminal=? res=success'"
---
{
  "record_type": "USER_AUTH",
  "timestamp": 1481077043046,
  "id": 408,
  "fields": {
    "auid": null,
    "msg": {
      "acct": "andrew_kroh",
      "addr": "96.241.146.97",
      "exe": "/usr/sbin/sshd",
      "hostname": "?",
      "op": "pubkey_auth",
      "res": "success",
      "rport": "63927",
      "terminal": "?"
    },
    "pid": "1298",
    "ses": "4294967295",
    "subj": {
      "level": {
        "category": "c0.c1023",
        "sensitivity": "s0-s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "sshd_t",
      "user": "system_u"
    },
    "uid": "root"
  }
}
