tests/snapshots/integration_test__log_data@89093004bd17703138c9cb10c4337cb5.snap
---
source: tests/integration_test.rs
expression: record
info: "type=SERVICE_START msg=audit(1481076983.864:6): pid=1 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:init_t:s0 msg='unit=auditd comm=\"systemd\" exe=\"/usr/lib/systemd/systemd\" hostname=? addr=? terminal=? res=success'"
---
{
  "record_type": "SERVICE_START",
  "timestamp": 1481076983864,
  "id": 6,
  "fields": {
    "auid": "4294967295",
    "msg": {
      "addr": "?",
      "comm": "systemd",
      "exe": "/usr/lib/systemd/systemd",
      "hostname": "?",
      "res": "success",
      "terminal": "?",
      "unit": "auditd"
    },
    "pid": "1",
    "ses": "4294967295",
    "subj": "system_u:system_r:init_t:s0",
    "uid": "0"
  }
}
