tests/snapshots/integration_test__log_data@8984208d3b1c2e72045998e6b6b0436f.snap
---
source: tests/integration_test.rs
expression: record
info: "type=SYSTEM_BOOT msg=audit(1481076983.876:7): pid=273 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:init_t:s0 msg=' comm=\"systemd-update-utmp\" exe=\"/usr/lib/systemd/systemd-update-utmp\" hostname=? addr=? terminal=? res=success'"
---
{
  "record_type": "SYSTEM_BOOT",
  "timestamp": 1481076983876,
  "id": 7,
  "fields": {
    "auid": null,
    "msg": {
      "addr": "?",
      "comm": "systemd-update-utmp",
      "exe": "/usr/lib/systemd/systemd-update-utmp",
      "hostname": "?",
      "res": "success",
      "terminal": "?"
    },
    "pid": "273",
    "ses": "4294967295",
    "subj": {
      "level": {
        "sensitivity": "s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "init_t",
      "user": "system_u"
    },
    "uid": "root"
  }
}
