tests/snapshots/integration_test__log_data@9a900d8cd83711228e00efad842d9e1d.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:27"
expression: result
info: "type=SYSCALL msg=audit(1481076984.827:17): arch=c000003e syscall=313 success=yes exit=0 a0=0 a1=41a15c a2=0 a3=0 items=0 ppid=390 pid=391 auid=4294967295 uid=0 gid=0 euid=0 suid=0 fsuid=0 egid=0 sgid=0 fsgid=0 tty=(none) ses=4294967295 comm=\"modprobe\" exe=\"/usr/bin/kmod\" subj=system_u:system_r:insmod_t:s0 key=(null)"
---
{
  "record_type": "SYSCALL",
  "timestamp": 1481076984827,
  "id": 17,
  "fields": {
    "a0": "0",
    "a1": "41a15c",
    "a2": "0",
    "a3": "0",
    "arch": "c000003e",
    "auid": null,
    "comm": "modprobe",
    "egid": "root",
    "euid": "root",
    "exe": "/usr/bin/kmod",
    "exit": 0,
    "fsgid": "root",
    "fsuid": "root",
    "gid": "root",
    "items": "0",
    "key": null,
    "pid": "391",
    "ppid": "390",
    "ses": "4294967295",
    "sgid": "root",
    "subj": {
      "level": {
        "sensitivity": "s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "insmod_t",
      "user": "system_u"
    },
    "success": true,
    "suid": "root",
    "syscall": "313",
    "tty": null,
    "uid": "root"
  }
}
