tests/snapshots/integration_test__log_data@b568c24b8bd3bfda1681b1c1fdba05b4.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PATH msg=audit(1481077231.371:479): item=0 name=\"/sbin/auditctl\" inode=17367907 dev=08:01 mode=0100750 ouid=0 ogid=0 rdev=00:00 obj=system_u:object_r:auditctl_exec_t:s0 objtype=NORMAL"
---
{
  "record_type": "PATH",
  "timestamp": 1481077231371,
  "id": 479,
  "fields": {
    "dev": "08:01",
    "inode": "17367907",
    "item": "0",
    "mode": {
      "attributes": [],
      "file_type": "regular-file",
      "group": [
        "read",
        "exec"
      ],
      "other": [],
      "user": [
        "read",
        "write",
        "exec"
      ]
    },
    "name": "/sbin/auditctl",
    "obj": {
      "level": {
        "sensitivity": "s0"
      },
      "module": "SELinux",
      "role": "object_r",
      "type": "auditctl_exec_t",
      "user": "system_u"
    },
    "objtype": "NORMAL",
    "ogid": "root",
    "ouid": "root",
    "rdev": "00:00"
  }
}
