tests/snapshots/integration_test__log_data@b7677b740d5f79dffe9bf3a7f90a16e6.snap
---
source: tests/integration_test.rs
expression: record
info: "type=USER_LOGIN msg=audit(1492896301.818:19955): pid=12635 uid=0 auid=4294967295 ses=4294967295 msg='op=login acct=28696E76616C6964207573657229 exe=\"/usr/sbin/sshd\" hostname=? addr=179.38.151.221 terminal=sshd res=failed'"
---
{
  "record_type": "USER_LOGIN",
  "timestamp": 1492896301818,
  "id": 19955,
  "fields": {
    "auid": 4294967295,
    "msg": {
      "acct": "28696E76616C6964207573657229",
      "addr": "179.38.151.221",
      "exe": "/usr/sbin/sshd",
      "hostname": "?",
      "op": "login",
      "res": "failed",
      "terminal": "sshd"
    },
    "pid": 12635,
    "ses": 4294967295,
    "uid": 0
  }
}
